--- a/testXib/testXib/TestXibViewController.xib
+++ b/testXib/testXib/TestXibViewController.xib
@@ -20,40 +20,79 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tb5-jh-TNy">
-                    <rect key="frame" x="166" y="99" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Выберите вид услуги" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tb5-jh-TNy">
+                    <rect key="frame" x="72" y="169" width="270" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="34" id="AEz-UQ-8rO"/>
+                        <constraint firstAttribute="width" constant="270" id="HDP-UA-1rl"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efu-TQ-G29">
-                    <rect key="frame" x="164" y="264" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Доставка в пункт назначения" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7e-rJ-JKF">
+                    <rect key="frame" x="107.5" y="499" width="199" height="19"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="19" id="iJc-ap-Q6N"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.54117647058823526" green="0.54117647058823526" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I2M-zS-Osd">
+                    <rect key="frame" x="35.5" y="443" width="343" height="50"/>
+                    <color key="backgroundColor" red="0.29803921570000003" green="0.76470588240000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="343" id="7Ur-sR-uFc"/>
+                        <constraint firstAttribute="height" constant="50" id="y6t-s7-isw"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                    <state key="normal" title="Перевозка">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7e-rJ-JKF">
-                    <rect key="frame" x="166" y="302" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Временное владение и пользование ТС с водителем" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="493-Xs-CWe">
+                    <rect key="frame" x="72" y="609" width="270" height="38"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="38" id="JlP-oj-tI0"/>
+                        <constraint firstAttribute="width" constant="270" id="rL0-KI-o3u"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.54117647059999996" green="0.54117647059999996" blue="0.56078431370000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I2M-zS-Osd">
-                    <rect key="frame" x="164" y="345" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efu-TQ-G29">
+                    <rect key="frame" x="35.5" y="548" width="343" height="50"/>
+                    <color key="backgroundColor" red="0.29803921570000003" green="0.76470588240000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="MiG-cK-F7g"/>
+                        <constraint firstAttribute="width" constant="343" id="SyF-zL-CTJ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                    <state key="normal" title="Аренда">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="493-Xs-CWe">
-                    <rect key="frame" x="166" y="400" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="493-Xs-CWe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="609" id="0ni-gq-4Fk"/>
+                <constraint firstItem="M7e-rJ-JKF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5vg-qp-8p7"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="493-Xs-CWe" secondAttribute="bottom" constant="170" id="BAN-bt-dU3" userLabel="Safe Area.bottom = Временное владение и пользование ТС с водителем.bottom &gt;= 170"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Tb5-jh-TNy" secondAttribute="bottom" constant="693" id="GZg-PZ-dus"/>
+                <constraint firstItem="I2M-zS-Osd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="443" id="I08-gS-zqd"/>
+                <constraint firstItem="493-Xs-CWe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RH7-xb-lcm"/>
+                <constraint firstItem="493-Xs-CWe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="WXq-DC-8Iw"/>
+                <constraint firstItem="efu-TQ-G29" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="WZM-1s-hx3"/>
+                <constraint firstItem="493-Xs-CWe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="609" id="Xuf-4T-nks"/>
+                <constraint firstItem="efu-TQ-G29" firstAttribute="top" secondItem="M7e-rJ-JKF" secondAttribute="bottom" constant="30" id="aCi-Qe-54W"/>
+                <constraint firstItem="Tb5-jh-TNy" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jTS-LA-s0y"/>
+                <constraint firstItem="I2M-zS-Osd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="lVp-ij-sdf"/>
+                <constraint firstItem="M7e-rJ-JKF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="499" id="ocy-GU-GmQ"/>
+                <constraint firstItem="Tb5-jh-TNy" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="rkI-Nw-cc4"/>
+                <constraint firstItem="Tb5-jh-TNy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="169" id="wAN-dg-j0B"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="47.826086956521742" y="60.9375"/>
         </view>
     </objects>
 </document>
