--- a/testXib/testXib/TestXibView.xib
+++ b/testXib/testXib/TestXibView.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TestXibViewController" customModule="testXib" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TestXibView" customModule="testXib" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -88,6 +88,7 @@
                 <constraint firstItem="M7e-rJ-JKF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="499" id="ocy-GU-GmQ"/>
                 <constraint firstItem="Tb5-jh-TNy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="169" id="wAN-dg-j0B"/>
             </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="47.826086956521742" y="60.9375"/>
         </view>
