--- a/testXib/testXib/TestXibView.xib
+++ b/testXib/testXib/TestXibView.xib
@@ -10,13 +10,18 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TestXibView" customModule="testXib" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
             <connections>
+                <outlet property="deliveryButton" destination="M7e-rJ-JKF" id="bmy-CJ-KFX"/>
+                <outlet property="ownershipButton" destination="493-Xs-CWe" id="vSR-Za-z28"/>
+                <outlet property="rentButton" destination="efu-TQ-G29" id="bYY-kS-Q1t"/>
+                <outlet property="titleButton" destination="Tb5-jh-TNy" id="65c-lf-F5k"/>
+                <outlet property="transportation" destination="I2M-zS-Osd" id="8JI-4q-mdp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="TestXibView" customModule="testXib" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
