--- a/testXib/testXib/TestXibView.xib
+++ b/testXib/testXib/TestXibView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -22,11 +22,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="TestXibView" customModule="testXib" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Выберите вид услуги" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tb5-jh-TNy">
-                    <rect key="frame" x="72" y="169" width="270" height="34"/>
+                    <rect key="frame" x="25" y="169" width="270" height="34"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="AEz-UQ-8rO"/>
                         <constraint firstAttribute="width" constant="270" id="HDP-UA-1rl"/>
@@ -35,7 +35,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Доставка в пункт назначения" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7e-rJ-JKF">
-                    <rect key="frame" x="107.5" y="499" width="199" height="19"/>
+                    <rect key="frame" x="60.5" y="499" width="199" height="19"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="19" id="iJc-ap-Q6N"/>
                     </constraints>
@@ -44,7 +44,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I2M-zS-Osd">
-                    <rect key="frame" x="35.5" y="443" width="343" height="50"/>
+                    <rect key="frame" x="-11.5" y="443" width="343" height="50"/>
                     <color key="backgroundColor" red="0.29803921570000003" green="0.76470588240000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="343" id="7Ur-sR-uFc"/>
@@ -61,7 +61,7 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Временное владение и пользование ТС с водителем" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="493-Xs-CWe">
-                    <rect key="frame" x="72" y="609" width="270" height="38"/>
+                    <rect key="frame" x="25" y="609" width="270" height="38"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="JlP-oj-tI0"/>
                         <constraint firstAttribute="width" constant="270" id="rL0-KI-o3u"/>
@@ -71,7 +71,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efu-TQ-G29">
-                    <rect key="frame" x="35.5" y="548" width="343" height="50"/>
+                    <rect key="frame" x="-11.5" y="548" width="343" height="50"/>
                     <color key="backgroundColor" red="0.29803921570000003" green="0.76470588240000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="MiG-cK-F7g"/>
@@ -91,16 +91,21 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="493-Xs-CWe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="609" id="0ni-gq-4Fk"/>
+                <constraint firstItem="M7e-rJ-JKF" firstAttribute="top" secondItem="I2M-zS-Osd" secondAttribute="bottom" constant="6" id="1bf-Sh-opf"/>
                 <constraint firstItem="M7e-rJ-JKF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5vg-qp-8p7"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="493-Xs-CWe" secondAttribute="bottom" priority="250" constant="170" id="BAN-bt-dU3" userLabel="Safe Area.bottom = Временное владение и пользование ТС с водителем.bottom &gt;= 170"/>
+                <constraint firstAttribute="bottom" secondItem="493-Xs-CWe" secondAttribute="bottom" priority="250" constant="170" id="BAN-bt-dU3" userLabel="Safe Area.bottom = Временное владение и пользование ТС с водителем.bottom &gt;= 170"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Tb5-jh-TNy" secondAttribute="bottom" priority="250" constant="693" id="GZg-PZ-dus"/>
-                <constraint firstItem="I2M-zS-Osd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="443" id="I08-gS-zqd"/>
+                <constraint firstItem="I2M-zS-Osd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" priority="250" constant="443" id="I08-gS-zqd"/>
+                <constraint firstItem="493-Xs-CWe" firstAttribute="top" secondItem="efu-TQ-G29" secondAttribute="bottom" constant="11" id="LaH-H7-dgO"/>
                 <constraint firstItem="493-Xs-CWe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RH7-xb-lcm"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="493-Xs-CWe" secondAttribute="bottom" priority="250" constant="131" id="UHO-ey-Eh4"/>
                 <constraint firstItem="efu-TQ-G29" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="WZM-1s-hx3"/>
                 <constraint firstItem="efu-TQ-G29" firstAttribute="top" secondItem="M7e-rJ-JKF" secondAttribute="bottom" constant="30" id="aCi-Qe-54W"/>
+                <constraint firstItem="493-Xs-CWe" firstAttribute="top" secondItem="efu-TQ-G29" secondAttribute="bottom" constant="11" id="aEj-q3-Scw"/>
+                <constraint firstItem="I2M-zS-Osd" firstAttribute="top" secondItem="Tb5-jh-TNy" secondAttribute="bottom" priority="750" constant="240" id="dzN-yV-Tvb"/>
                 <constraint firstItem="Tb5-jh-TNy" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jTS-LA-s0y"/>
                 <constraint firstItem="I2M-zS-Osd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="lVp-ij-sdf"/>
-                <constraint firstItem="M7e-rJ-JKF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="499" id="ocy-GU-GmQ"/>
+                <constraint firstItem="M7e-rJ-JKF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" priority="250" constant="499" id="ocy-GU-GmQ"/>
                 <constraint firstItem="Tb5-jh-TNy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="169" id="wAN-dg-j0B"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
